[gd_scene load_steps=77 format=2]

[ext_resource path="res://TileMapset.tres" type="TileSet" id=1]
[ext_resource path="res://asset/Ninja Frog/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://Hero.gd" type="Script" id=3]
[ext_resource path="res://asset/Ninja Frog/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://asset/Ninja Frog/Jump (32x32).png" type="Texture" id=5]
[ext_resource path="res://asset/Ninja Frog/Hit (32x32).png" type="Texture" id=6]
[ext_resource path="res://asset/Ninja Frog/Fall (32x32).png" type="Texture" id=7]
[ext_resource path="res://Level1.gd" type="Script" id=8]
[ext_resource path="res://TileMaptembus.tres" type="TileSet" id=9]
[ext_resource path="res://asset/Palm Tree Island/Background/BG Image.png" type="Texture" id=10]
[ext_resource path="res://asset/Palm Tree Island/Background/Additional Sky.png" type="Texture" id=11]
[ext_resource path="res://asset/Palm Tree Island/Background/Additional Water.png" type="Texture" id=12]
[ext_resource path="res://asset/Palm Tree Island/Background/Big Clouds.png" type="Texture" id=13]
[ext_resource path="res://asset/Palm Tree Island/Background/Small Cloud 1.png" type="Texture" id=14]
[ext_resource path="res://goldcoin.tscn" type="PackedScene" id=15]
[ext_resource path="res://apel.tscn" type="PackedScene" id=16]
[ext_resource path="res://Musuh1.tscn" type="PackedScene" id=17]
[ext_resource path="res://trampolin.tscn" type="PackedScene" id=18]
[ext_resource path="res://checkpoint.tscn" type="PackedScene" id=19]
[ext_resource path="res://asset/Wood and Paper UI/Life Bars/Medium Bars/5.png" type="Texture" id=20]
[ext_resource path="res://asset/Wood and Paper UI/Life Bars/Medium Bars/4.png" type="Texture" id=21]
[ext_resource path="res://asset/Wood and Paper UI/Life Bars/Colors/4.png" type="Texture" id=22]
[ext_resource path="res://asset/Wood and Paper UI/Life Bars/Medium Bars/3.png" type="Texture" id=23]
[ext_resource path="res://asset/Free/Main Characters/Ninja Frog/Hit (32x32).png" type="Texture" id=24]
[ext_resource path="res://asset/Wood and Paper UI/Small Banner/13.png" type="Texture" id=25]
[ext_resource path="res://asset/Wood and Paper UI/Small Banner/9.png" type="Texture" id=26]
[ext_resource path="res://asset/Pirate Treasure/Gold Coin/01.png" type="Texture" id=27]
[ext_resource path="res://asset/Folks-Normal.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://asset/Wood and Paper UI/Yellow Button/1.png" type="Texture" id=29]
[ext_resource path="res://asset/Wood and Paper UI/Prefabs/6.png" type="Texture" id=30]
[ext_resource path="res://tmblpopup.tres" type="StyleBox" id=31]
[ext_resource path="res://Popkalah.gd" type="Script" id=32]

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 47.75, 12.25 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 24 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 95 ), SubResource( 96 ) ],
"loop": false,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "Diam",
"speed": 20.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 87 ), SubResource( 88 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "Hit",
"speed": 20.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Jatuh",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "Lari",
"speed": 20.0
}, {
"frames": [ SubResource( 86 ) ],
"loop": false,
"name": "Lompat",
"speed": 5.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ) ],
"loop": false,
"name": "mati",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 11.5 )

[sub_resource type="RectangleShape2D" id=94]
extents = Vector2( 930.5, 14.5 )

[sub_resource type="DynamicFont" id=105]
size = 11
font_data = ExtResource( 28 )

[sub_resource type="DynamicFont" id=106]
size = 12
extra_spacing_bottom = 6
font_data = ExtResource( 28 )

[sub_resource type="DynamicFont" id=107]
size = 13
extra_spacing_bottom = 1
font_data = ExtResource( 28 )

[sub_resource type="DynamicFont" id=108]
size = 13
font_data = ExtResource( 28 )

[sub_resource type="StyleBoxTexture" id=109]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 14, 14 )
margin_left = 3.0
margin_right = 3.0
margin_top = 2.0
margin_bottom = 3.0

[node name="Level1" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 8 )

[node name="TileMapset" type="TileMap" parent="."]
position = Vector2( 2, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, 65535, 4, 0, 0, 12, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 13, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 32, 4, 0, 33, 4, 0, 34, 4, 0, 35, 4, 0, 36, 4, 0, 37, 5, 0, 131071, 4, 0, 65536, 5, 0, 65553, 8, 0, 65554, 7, 0, 65555, 7, 0, 65556, 7, 0, 65557, 7, 0, 65558, 7, 0, 65559, 7, 0, 65560, 7, 0, 65561, 7, 0, 65562, 7, 0, 65563, 7, 0, 65564, 7, 0, 65565, 7, 0, 65566, 7, 0, 65567, 7, 0, 65568, 7, 0, 65569, 7, 0, 65570, 7, 0, 65571, 4, 0, 65572, 4, 0, 65573, 5, 0, 196607, 4, 0, 131072, 5, 0, 131107, 4, 0, 131108, 4, 0, 131109, 5, 0, 262143, 4, 0, 196608, 5, 0, 196643, 4, 0, 196644, 4, 0, 196645, 5, 0, 327679, 4, 0, 262144, 5, 0, 262151, 9, 0, 262173, 0, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 262178, 1, 0, 262179, 4, 0, 262180, 4, 0, 262181, 5, 0, 393215, 4, 0, 327680, 5, 0, 327701, 1, 0, 327702, 2, 0, 327709, 3, 0, 327710, 4, 0, 327711, 4, 0, 327712, 4, 0, 327713, 4, 0, 327714, 4, 0, 327715, 4, 0, 327716, 4, 0, 327717, 5, 0, 458751, 4, 0, 393216, 5, 0, 393226, 0, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 4, 0, 393238, 5, 0, 393245, 3, 0, 393246, 4, 0, 393247, 4, 0, 393248, 4, 0, 393249, 4, 0, 393250, 4, 0, 393251, 4, 0, 393252, 4, 0, 393253, 5, 0, 524287, 4, 0, 458752, 14, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 2, 0, 458760, 25, 0, 458762, 3, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 5, 0, 458778, 24, 0, 458779, 25, 0, 458780, 25, 0, 458781, 35, 0, 458782, 7, 0, 458783, 7, 0, 458784, 7, 0, 458785, 7, 0, 458786, 7, 0, 458787, 7, 0, 458788, 7, 0, 458789, 6, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 5, 0, 524298, 3, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 4, 0, 524310, 42, 0, 524311, 44, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 5, 0, 589834, 3, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 4, 0, 589846, 4, 0, 589847, 4, 0, 589848, 44, 0, 589869, 0, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, 589873, 2, 0, 720895, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 5, 0, 655370, 3, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 2, 0, 655393, 0, 0, 655394, 1, 0, 655395, 1, 0, 655396, 4, 0, 655397, 4, 0, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655405, 3, 0, 655406, 4, 0, 655407, 4, 0, 655408, 4, 0, 655409, 5, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 5, 0, 720906, 3, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 4, 0, 720925, 4, 0, 720926, 5, 0, 720929, 3, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 5, 0, 720936, 3, 0, 720937, 4, 0, 720938, 5, 0, 720941, 3, 0, 720942, 4, 0, 720943, 4, 0, 720944, 4, 0, 720945, 5, 0 )

[node name="TileMaptembus" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196611, 0, 0, 196612, 1, 0, 196613, 2, 0, 196618, 0, 0, 196619, 1, 0, 196620, 2, 0, 262147, 3, 0, 262148, 4, 0, 262149, 5, 0, 262154, 3, 0, 262155, 4, 0, 262156, 5, 0, 327683, 3, 0, 327684, 4, 0, 327685, 5, 0, 327690, 3, 0, 327691, 4, 0, 327692, 5, 0, 393219, 3, 0, 393220, 4, 0, 393221, 5, 0, 655396, 1, 0, 655397, 1, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="TileMaptembus"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMaptembus/StaticBody2D"]
position = Vector2( 143.5, 108.5 )
shape = SubResource( 97 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TileMaptembus/StaticBody2D"]
position = Vector2( 367, 110 )
shape = SubResource( 97 )
one_way_collision = true

[node name="Hero" type="KinematicBody2D" parent="."]
position = Vector2( 51, 95 )
collision_mask = 30
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Hero"]
position = Vector2( 1, 0 )
frames = SubResource( 73 )
animation = "Diam"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero"]
position = Vector2( 1.5, 3.5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Hero"]
current = true
limit_left = 0
limit_top = 0
limit_right = 1864
limit_bottom = 351
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.4
drag_margin_right = 0.3
drag_margin_bottom = 0.51
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Timer" type="Timer" parent="Hero"]
wait_time = 0.362
one_shot = true

[node name="AreaJatuh" type="Area2D" parent="."]
position = Vector2( 597, 394 )
collision_layer = 16
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaJatuh"]
position = Vector2( 338.5, 4.5 )
shape = SubResource( 94 )

[node name="checkpoint" parent="AreaJatuh" instance=ExtResource( 19 )]
position = Vector2( 1002, -138 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Langit" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 0, -154 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( 28, 142 )
scale = Vector2( 1, 1.19531 )
texture = ExtResource( 10 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( 2, -1 )
scale = Vector2( 12.1875, 4.46875 )
texture = ExtResource( 11 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( 3, 293 )
scale = Vector2( 12.0937, 4.90625 )
texture = ExtResource( 12 )
centered = false

[node name="Awan" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.513726 )
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -100 )
motion_mirroring = Vector2( 448, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Awan"]
position = Vector2( 37, 91 )
texture = ExtResource( 13 )
centered = false

[node name="awan kecil" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/awan kecil"]
position = Vector2( 126, 41 )
texture = ExtResource( 14 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/awan kecil"]
position = Vector2( 653, 73 )
texture = ExtResource( 14 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/awan kecil"]
position = Vector2( 321, 58 )
texture = ExtResource( 14 )
centered = false

[node name="trampolin" parent="." instance=ExtResource( 18 )]
position = Vector2( 275, 210 )

[node name="grupbarang" type="Node2D" parent="."]

[node name="koin" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 86, 217 )

[node name="koin2" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 113, 218 )

[node name="koin6" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1083, 101 )

[node name="koin7" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1045, 102 )

[node name="koin5" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1008, 103 )

[node name="koin3" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 148, 218 )

[node name="koin4" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1145, 310 )

[node name="koin9" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1165, 288 )

[node name="koin10" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 865, 96 )

[node name="koin11" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 835, 110 )

[node name="koin12" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 815, 136 )

[node name="koin13" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 795, 168 )

[node name="koin14" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 543, 68 )

[node name="koin15" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 529, 84 )

[node name="koin16" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 543, 96 )

[node name="koin17" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 555, 82 )

[node name="koin18" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 525, 66 )

[node name="koin19" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 561, 98 )

[node name="koin20" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1473, 162 )

[node name="koin21" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1487, 176 )

[node name="koin22" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1503, 192 )

[node name="koin23" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1519, 208 )

[node name="koin24" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1537, 224 )

[node name="koin25" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1553, 240 )

[node name="koin26" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1569, 254 )

[node name="koin27" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1457, 176 )

[node name="koin28" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1473, 192 )

[node name="koin29" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1491, 208 )

[node name="koin30" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1505, 224 )

[node name="koin31" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1521, 242 )

[node name="koin32" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1537, 256 )

[node name="koin33" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1553, 272 )

[node name="koin34" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1569, 272 )

[node name="koin35" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1569, 224 )

[node name="koin36" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1521, 272 )

[node name="koin8" parent="grupbarang" instance=ExtResource( 15 )]
position = Vector2( 1185, 310 )

[node name="Apel" parent="grupbarang" instance=ExtResource( 16 )]
position = Vector2( 338, 88 )

[node name="Apel2" parent="grupbarang" instance=ExtResource( 16 )]
position = Vector2( 361, 66 )

[node name="Apel3" parent="grupbarang" instance=ExtResource( 16 )]
position = Vector2( 385, 88 )

[node name="grupMusuh" type="Node2D" parent="."]

[node name="Musuh1" parent="grupMusuh" instance=ExtResource( 17 )]
position = Vector2( 199, 209 )

[node name="Musuh4" parent="grupMusuh" instance=ExtResource( 17 )]
position = Vector2( 653, 178 )

[node name="Musuh5" parent="grupMusuh" instance=ExtResource( 17 )]
position = Vector2( 883, 210 )

[node name="Musuh3" parent="grupMusuh" instance=ExtResource( 17 )]
position = Vector2( 173, 80 )

[node name="Musuh2" parent="grupMusuh" instance=ExtResource( 17 )]
position = Vector2( 363, 178 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="Control" parent="CanvasLayer"]
margin_right = 33.0
margin_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HealthBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 23 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/HealthBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 21 )

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/HealthBar/HBoxContainer"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 40.0
texture = ExtResource( 20 )

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/HealthBar"]
margin_left = 28.0
margin_top = 15.0
margin_right = 79.0
margin_bottom = 17.0
value = 100.0
texture_progress = ExtResource( 22 )
nine_patch_stretch = true

[node name="CoinBar" type="Control" parent="CanvasLayer"]
margin_left = 254.0
margin_right = 294.0
margin_bottom = 25.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CoinBar"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 26 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/CoinBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 25 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinBar"]
margin_left = 16.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 22.0
texture = ExtResource( 27 )

[node name="Label" type="Label" parent="CanvasLayer/CoinBar"]
margin_left = 35.0
margin_top = 9.0
margin_right = 69.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 105 )
text = "0"

[node name="Popkalah" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -254.0
margin_right = 73.0
margin_bottom = -126.0
script = ExtResource( 32 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Popkalah"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 30 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Popkalah"]
margin_left = 25.0
margin_top = 18.0
margin_right = 102.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="CanvasLayer/Popkalah/VBoxContainer"]
margin_right = 77.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 106 )
text = "Kamu Kalah ?
WKWKWK"

[node name="ulang" type="Button" parent="CanvasLayer/Popkalah/VBoxContainer"]
margin_top = 47.0
margin_right = 77.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 107 )
custom_styles/hover = ExtResource( 31 )
custom_styles/pressed = ExtResource( 31 )
custom_styles/focus = ExtResource( 31 )
custom_styles/disabled = ExtResource( 31 )
custom_styles/normal = ExtResource( 31 )
text = "ULANG"

[node name="keluar" type="Button" parent="CanvasLayer/Popkalah/VBoxContainer"]
margin_top = 72.0
margin_right = 77.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 108 )
custom_styles/hover = ExtResource( 31 )
custom_styles/pressed = ExtResource( 31 )
custom_styles/focus = ExtResource( 31 )
custom_styles/disabled = ExtResource( 31 )
custom_styles/normal = SubResource( 109 )
text = "KELUAR"

[node name="Tween" type="Tween" parent="CanvasLayer/Popkalah"]

[connection signal="hero_mati" from="." to="CanvasLayer/Popkalah" method="_on_Level1_hero_mati"]
[connection signal="hero_apdet_health" from="Hero" to="." method="_on_Hero_hero_apdet_health"]
[connection signal="hero_apdet_koin" from="Hero" to="." method="_on_Hero_hero_apdet_koin"]
[connection signal="timeout" from="Hero/Timer" to="Hero" method="_on_Timer_timeout"]
[connection signal="body_entered" from="AreaJatuh" to="." method="_on_AreaJatuh_body_entered"]
[connection signal="body_entered" from="grupbarang/Apel" to="." method="_on_Apel_body_entered"]
[connection signal="body_entered" from="grupbarang/Apel2" to="." method="_on_Apel_body_entered"]
[connection signal="body_entered" from="grupbarang/Apel3" to="." method="_on_Apel_body_entered"]
[connection signal="pressed" from="CanvasLayer/Popkalah/VBoxContainer/ulang" to="CanvasLayer/Popkalah" method="_on_ulang_pressed"]
